--- a/index.html
+++ b/index.html
@@ -7,7 +7,59 @@
   </head>
   <body>
 
-    <script src="sketch.js"></script>
-    
+    <script src="sketch.js">
+        let thunderSound;
+        let windSound;
+        let hailSound;
+        let rainSound;
+        let imgOne;
+        let soundVolume;
+        function preload(){
+          soundFormats('mp3');
+          thunderSound = loadSound('thunder.mp3');
+          windSound = loadSound('wind.mp3');
+          hailSound = loadSound('hail.mp3');
+          rainSound = loadSound('rain.mp3');
+          imageFormats('jpg');
+          imgOne = loadImage('storm.jpg');
+         }
+
+        function setup(){
+          imgOne();
+          createCanvas(700, 850);
+          noFill();
+          soundVolume = 0.5;
+          thunderSound.setVolume(soundVolume);
+          windSound.setVolume(soundVolume);
+          hailSound.setVolume(soundVolume);
+          rainSound.setVolume(soundVolume);
+          }
+
+        function draw(){
+          image(img, 75, 75);
+        }
+
+        function mouseMoved(){
+          if (mouseY > 700){
+            thunderSound.play();
+          }
+          else {
+          if (mouseY > 600){
+            windSound.play();
+          }
+          else {
+            if (mouseY > 500){
+              hailSound.play();
+            }
+            else {
+              if (mouseY < 400){
+                rainSound.play();
+              }
+            }
+          }
+        }
+        }
+    </script>
+
 </body>
 </html>
