--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="sketch.js">
 
         let imgOne();
+        let soundVolume();
         let thunderSound();
         let windSound();
         let hailSound();
